--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "babel-loader": "^6.3.2",
     "babel-preset-es2015": "^6.22.0",
     "babel-preset-react": "^6.23.0",
+    "image-webpack-loader": "^4.3.1",
     "webpack": "^2.2.1"
   },
   "dependencies": {
@@ -21,12 +22,14 @@
     "body-parser": "^1.17.2",
     "css-loader": "^1.0.0",
     "express": "^4.15.0",
+    "file-loader": "^2.0.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
     "mysql": "^2.13.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-scroll": "^1.7.10",
-    "style-loader": "^0.23.0"
+    "style-loader": "^0.23.0",
+    "url-loader": "^1.1.1"
   }
 }
