--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "angular": "^1.6.3",
     "body-parser": "^1.17.2",
+    "canvasjs": "^1.8.1",
     "css-loader": "^1.0.0",
     "express": "^4.15.0",
     "file-loader": "^2.0.0",
@@ -27,6 +28,7 @@
     "mongoose": "^4.8.6",
     "mysql": "^2.13.0",
     "react": "^15.4.2",
+    "react-bar-chart": "^0.1.2",
     "react-dom": "^15.4.2",
     "react-scroll": "^1.7.10",
     "style-loader": "^0.23.0",
