--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "mysql": "^2.13.0",
     "react": "^15.4.2",
     "react-bar-chart": "^0.1.2",
+    "react-card-flip": "^0.2.1",
     "react-dom": "^15.4.2",
     "react-scroll": "^1.7.10",
+    "react-sticky": "^6.0.3",
     "style-loader": "^0.23.0",
     "url-loader": "^1.1.1"
   }
