--- a/package.json
+++ b/package.json
@@ -18,10 +18,20 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
+    "@vx/axis": "0.0.176",
+    "@vx/grid": "0.0.176",
+    "@vx/group": "0.0.170",
+    "@vx/legend": "0.0.170",
+    "@vx/mock-data": "0.0.165",
+    "@vx/scale": "0.0.165",
+    "@vx/shape": "0.0.176",
+    "@vx/tooltip": "0.0.165",
     "angular": "^1.6.3",
     "body-parser": "^1.17.2",
     "canvasjs": "^1.8.1",
     "css-loader": "^1.0.0",
+    "d3-array": "^1.2.4",
+    "d3-time-format": "^2.1.3",
     "express": "^4.15.0",
     "file-loader": "^2.0.0",
     "jquery": "^3.1.1",
@@ -31,8 +41,11 @@
     "react-bar-chart": "^0.1.2",
     "react-card-flip": "^0.2.1",
     "react-dom": "^15.4.2",
+    "react-pose": "^3.3.6",
+    "react-reveal": "^1.2.2",
     "react-scroll": "^1.7.10",
     "react-sticky": "^6.0.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
     "url-loader": "^1.1.1"
   }
