--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "react-dev": "webpack -d --watch",
-    "server-dev": "nodemon server/index.js"
+    "start": "nodemon server/index.js"
   },
   "author": "Beth Johnson",
   "license": "ISC",
@@ -18,27 +18,14 @@
     "webpack": "^2.2.1"
   },
   "dependencies": {
-    "@vx/axis": "0.0.176",
-    "@vx/grid": "0.0.176",
-    "@vx/group": "0.0.170",
-    "@vx/legend": "0.0.170",
-    "@vx/mock-data": "0.0.165",
-    "@vx/scale": "0.0.165",
-    "@vx/shape": "0.0.176",
-    "@vx/tooltip": "0.0.165",
-    "angular": "^1.6.3",
     "axios": "^0.18.0",
     "body-parser": "^1.17.2",
     "canvasjs": "^1.8.1",
     "css-loader": "^1.0.0",
-    "d3-array": "^1.2.4",
-    "d3-time-format": "^2.1.3",
     "express": "^4.15.0",
-    "express-router": "0.0.1",
     "file-loader": "^2.0.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
-    "mysql": "^2.13.0",
     "nodemailer": "^4.6.8",
     "react": "^15.4.2",
     "react-bar-chart": "^0.1.2",
