--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
     "nodemailer": "^4.6.8",
+    "nodemon": "^1.18.4",
     "react": "^15.4.2",
     "react-bar-chart": "^0.1.2",
     "react-bootstrap": "^0.32.4",
