--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "file-loader": "^2.0.0",
     "jquery": "^3.1.1",
     "mongoose": "^4.8.6",
+    "node": "^10.11.0",
     "nodemailer": "^4.6.8",
     "nodemon": "^1.18.4",
     "react": "^15.4.2",
