--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.17.2",
     "canvasjs": "^1.8.1",
     "css-loader": "^1.0.0",
+    "dotenv": "^6.1.0",
     "express": "^4.15.0",
     "file-loader": "^2.0.0",
     "jquery": "^3.1.1",
