--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.17.2",
     "canvasjs": "^1.8.1",
+    "cors": "^2.8.4",
     "css-loader": "^1.0.0",
     "dotenv": "^6.1.0",
     "express": "^4.15.0",
